# My-Dotfiles

./: .gitignore  README.md
ags/.config/ags/: app.tsx  style.css
autostart/.config/autostart/: jetbrains-toolbox.desktop
btop/.config/btop/: btop.conf
cava/.config/cava/: config
fastfetch/.config/fastfetch/: aperture-logo.txt  config-compact.jsonc  config-v2.jsonc  config.jsonc  donut  donut.c
hypr/.config/hypr/: colors.conf  hypridle.conf  hyprland.conf  hyprlock.conf  initial-boot.sh  start_lively_wallpaper.sh
hypr/.config/hypr/UserConfigs/: 01-UserDefaults.conf  Laptops.conf  Startup_Apps.conf  UserAnimations.conf  UserDecorations.conf  UserKeybinds.conf  UserSettings.conf  WindowRules.conf
hypr/.config/hypr/configs/: looknfeel.conf  windowrules.conf
hypr/.config/hypr/scripts/: DynamicWallpaper.sh  FacilityStatus.sh  HyprEvents.sh  IdleToggle.sh  Sounds.sh  SwitchKeyboardLayout.sh  ToggleBlur.sh  ToggleOpacity.sh  TouchPad.sh  Volume.sh  aperture-greeting.sh  glados-quote.sh  wppicker.sh
kitty/.config/kitty/: colors.conf  kitty.conf
mimeapps/.config/: mimeapps.list
rofi/.config/rofi/: colors.rasi  config.rasi  run-rofi.sh
sddm/: .stow-local-ignore  README.md
sfu-schedule/.config/sfu-schedule/: Cargo.toml  README.md  main.py  parser.py  pyproject.toml  schedule.json
sfu-schedule/.config/sfu-schedule/scripts/: toggle-schedule.sh
sfu-schedule/.config/sfu-schedule/src/: main.rs
swaync/.config/swaync/: config.json  style.css
waybar/.config/waybar/: .gitignore  colors.css  style.template.css  waybar.jsonc
wlogout/.config/wlogout/: style.css
(+15 files in other folders)
